@@ -25,6 +25,7 @@ By making import and export easy, it's an obvious next step to also use R as a s
 | Serialized R objects (.rds) | Yes | Yes |
 | Saved R objects (.RData) | Yes | Yes |
 | JSON (.json) | Yes | Yes |
+| YAML (.yml) | Yes | Yes |
 | Stata (.dta) | Yes | Yes |
 | SPSS and SPSS portable | Yes (.sav and .por) | Yes (.sav) |
 | "XBASE" database files (.dbf) | Yes | Yes |
@@ -33,7 +34,8 @@ By making import and export easy, it's an obvious next step to also use R as a s
 | Weka Attribute-Relation File Format (.arff) | Yes | Yes |
 | R syntax (.R) | Yes | Yes |
 | Shallow XML documents (.xml) | Yes | Yes |
-| SAS and SAS XPORT | Yes (.sas7bdat and .xpt) |  |
+| SAS (.sas7bdat) | Yes |  |
+| SAS XPORT (.xpt) | Yes |  |
 | Minitab (.mtp) | Yes |  |
 | Epiinfo (.rec) | Yes |  |
 | Systat (.syd) | Yes |  |
