@@ -1,5 +1,6 @@
 # CHANGES TO v0.3.15 #
 
+ * Added support for import from and export to yaml. (#83)
  * Fixed a bug when reading from an uncommented CSVY yaml header that contained single-line comments. (#84, h/t Tom Aldenberg)
 
 # CHANGES TO v0.3.14 #
